Send e-post og send sms funkær

--- a/twig/Components/Innslag/Personer/liste.html.twig
+++ b/twig/Components/Innslag/Personer/liste.html.twig
@@ -5,7 +5,7 @@
 {% elseif config.get('deltakere_visning') == 'kompakt' %}
     {% for person in innslag.getPersoner().getAll() %}
         {{person.getNavn() }}{% if config.show(selector~'_alder') %}
-        {% include "Components/mobil.html.twig" with {mobil: person.getMobil()} %}
+        {% include "Components/mobil.html.twig" with {mobil: person.getMobil(),navn: person.getNavn()} %}
         {% endif %}{% if config.show(selector~'_alder') %}
         ({{person.getAlder()}}){% endif %}{% if config.show('deltakere_rolle') %}
         - <i>{{ person.getRolle() }}</i>{% endif %}{{ not loop.last ? ', '}}
