--- a/twig/Components/mobil.html.twig
+++ b/twig/Components/mobil.html.twig
@@ -1,4 +1,4 @@
-<a href="#">
+<a href="#" class="UKMSMS" data-to="{{mobil}}" data-navn="{{navn}}">
 	<span style="white-space: nowrap;">
 		<span class="dashicons dashicons-smartphone dashicons-inline"></span>
 		{{ mobil }}
