--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -74,7 +74,7 @@
                 Last ned excel-fil
             </button>
 
-            <button type="button" class="btn btn-default btn-sm sendSMS" style="margin-left: 8em;">
+            <button type="button" class="btn btn-default btn-sm UKMSMSsendToAll" style="margin-left: 8em;">
                 <span class="dashicons dashicons-smartphone"></span>
                 Send sms
             </button>
@@ -86,6 +86,7 @@
     </div>
 
     <div id="reportContent"></div>
+    <div id="reportEmail" style="display:none;">SEND E-POST</div>
     <div id="reportGenerating">
         <div class="center">   
             <img src="/wp-admin/images/spinner-2x.gif" />
