update preview-render to run at page load

--- a/twig/Components/preview/list.html.twig
+++ b/twig/Components/preview/list.html.twig
@@ -30,4 +30,9 @@
         jQuery('#previewList_{{ id }}').find('.preview .option').hide();
         jQuery('#previewList_{{ id }}').find('#preview_' + jQuery(e.target).val()).fadeIn();
     });
+
+    jQuery(document).ready(function() {
+        var selectedItem = jQuery('#previewList_{{ id }}').find('.radioContainer input[type=radio]:checked');
+        jQuery('#previewList_{{ id }}').find('#preview_' + selectedItem.val()).fadeIn();
+    });
 </script>
