--- a/twig/Components/notes.html.twig
+++ b/twig/Components/notes.html.twig
@@ -7,6 +7,9 @@
             <br />&nbsp;
         {% elseif config.get('notatfelt_visning') == "stor" %}
             <br /><br /><br /><br /><br /><br /><br />&nbsp;
+        {% elseif config.get('notatfelt_visning') == "gigantisk" %}
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />&nbsp;
         {% endif %}
+
     </div>
 </div>
