--- a/twig/Kunstkatalog/innslag.html.twig
+++ b/twig/Kunstkatalog/innslag.html.twig
@@ -1,3 +1,8 @@
-{% for tittel in innslag.getTitler().getAll() %}
-    {% include "Kunstkatalog/tittel.html.twig" %}
-{% endfor %}
+{% if innslag.getType().harTitler() %}
+    {% for tittel in innslag.getTitler().getAll() %}
+        {% include "Kunstkatalog/tittel.html.twig" %}
+    {% endfor %}
+{% else %}
+    {# Innslag uten titler rendres med standard-element #}
+    {% include "Components/Innslag/element.html.twig" %}
+{% endif %}
