--- a/twig/Kunstkatalog/tittel.html.twig
+++ b/twig/Kunstkatalog/tittel.html.twig
@@ -1,107 +1,2 @@
-{% set maxCol = 1 + (config.show('kategori_og_sjanger') ? 1 : 0) + (config.show('fylke') or config.show('kommune') ? 1 : 0) + (config.show('varighet') ? 1 : 0) %}
-<li class="list-group-item" style="page-break-inside: avoid;">
-    {% block pre_table %}{% endblock %}
-	<table class="table table-borderless table-condensed">
-		<tr>
-			<td width="*%">
-                <h4 class="mt-0">{% block pre_name %}{% endblock %}{{ tittel.getNavn() }}</h4>
-                <h5 class="mt-0">{{ innslag.getNavn() }}</h5>
-			</td>
-			{% if config.show('kategori_og_sjanger') %}
-				<td width="30%">{{ innslag.getType().getNavn() }}{{ not innslag.getSjanger() is empty ? ' - '~innslag.getSjanger() }}</td>
-			{% endif %}
-			{% if config.show('fylke') or config.show('kommune') %}
-				<td width="30%">
-					{{ config.show('fylke') ? innslag.getFylke().getNavn() }}
-					{{ config.show('fylke') and config.show('kommune') ? ' - ' }}
-					{{ config.show('kommune') ? innslag.getKommune().getNavn() }}
-				</td>
-			{% endif %}
-			{% if config.show('varighet') %}
-				<td width="70" style="text-align:right;">
-					{% if innslag.getType().harTid() %}
-						{{ innslag.getVarighet().getHumanShort() }}
-					{% elseif innslag.getType().erEnkeltperson() and config.show('kontaktperson') and config.show('kontakt_alder') %}
-                        {{innslag.getPersoner().getSingle().getAlder()}}
-                    {% else %}
-                        &nbsp;
-					{% endif %}
-				</td>
-			{% endif %}
-		</tr>
-
-		{% block beskrivelse %}
-            {% if config.show('beskrivelse') %}
-                <tr>
-                    {% if innslag.getType().harBeskrivelse() and innslag.getType().erEnkeltperson() and innslag.getType().harFunksjoner() %}
-                        <td>
-                            {{ innslag.getPersoner().getSingle().getRolle() }}
-                        </td>
-                        <td colspan="{{maxCol - 1}}">
-                            {{ innslag.getBeskrivelse() }}
-                        </td>
-                    {% elseif innslag.getType().erEnkeltperson() and innslag.getType().harFunksjoner() %}
-                        <td>
-                            {{ innslag.getPersoner().getSingle().getRolle() }}
-                        </td>
-                    {% elseif innslag.getType().harBeskrivelse() %}
-                        <td colspan="{{maxCol}}">{{ innslag.getBeskrivelse() }}</td>
-                    {% endif %}
-                </tr>
-            {% endif %}
-            
-		{% endblock %}
-
-		{% block personer %}
-			{% if config.show('deltakere') and innslag.getType().erGruppe() %}
-                <tr>
-                    <td colspan="{{maxCol}}" class="internalHeader">PERSONER</td>
-                </tr>
-				<tr>
-					<td colspan="{{maxCol}}" {{ config.get('deltakere_visning') == 'tabell' ? 'style="padding-left:0;padding-right:0;"' }}>
-						{% include "Components/Innslag/Personer/liste.html.twig" %}
-					</td>
-				</tr>
-            {% elseif config.show('deltakere') %}{# implisitt: and innslag.getType().erEnkeltperson() #}
-                <tr>
-                    <td>
-                        {% if config.show('deltakere_mobil') or (config.show('kontaktperson') and config.show('kontakt_mobil') ) %}
-                            {% include "Components/mobil.html.twig" with {mobil: innslag.getPersoner().getSingle().getMobil(), navn: innslag.getPersoner().getSingle().getNavn()} %}
-                        {% endif %}
-                        {% if config.show('kontaktperson') and config.show('kontakt_epost') %}
-                            - {% include "Components/epost.html.twig" with {epost: innslag.getPersoner().getSingle().getEpost() } %}
-                        {% endif %}
-                    </td>
-                </tr>
-            {% elseif config.show('kontaktperson') %}
-				<tr>
-                    <td>
-                        {% include "Components/Innslag/Personer/kompakt.html.twig" with {person: innslag.getKontaktperson(), kontaktperson: true } %}
-                    </td>
-                </tr>
-			{% endif %}
-		{% endblock %}
-
-        {% block data %}{% endblock %}
-        
-        {% block notatfelt %}
-            {% if config.show('notatfelt') %}
-                <tr>
-                    <td>
-                        {% if config.show('notatfelt_lydteknisk') %}
-                            {% include "Components/notes.html.twig" with {'title': "Lysteknisk"} %}
-                        {% endif %}
-                        {% if config.show('notatfelt_lysteknisk') %}
-                            {% include "Components/notes.html.twig" with {'title': "Lydteknisk"} %}
-                        {% endif %}
-                        {% if config.show('notatfelt_generell') %}
-                            {% include "Components/notes.html.twig" with {'title': "Generelle notater"} %}
-                        {% endif %}
-                    </td>
-                </tr>
-                
-            {% endif %}
-        {% endblock %}
-
-	</table>
-</li>
+{% extends "Components/Innslag/element.html.twig" %}
+{% block pre_name %}{{ fancyCounter.next() }}. {{ tittel.getNavn() ? tittel.getNavn()~" - " : "" }}{% endblock %}
