--- a/twig/TekniskeProver/tilpass.html.twig
+++ b/twig/TekniskeProver/tilpass.html.twig
@@ -35,6 +35,7 @@
             {% embed "toggle.html.twig" with {id: 'vis_deltakere', title: 'Vis deltakere?', start: 'yes' } %}
                 {% block yes %}
                     {% include "checkbox.html.twig" with {id: 'deltakere_alder', title: 'Alder'} %}
+                    {% include "checkbox.html.twig" with {id: 'deltakere_mobil', title: 'Mobilnummer'} %}
                     {% include "checkbox.html.twig" with {id: 'deltakere_rolle', title: 'Rolle / instrument / funksjon'} %}
                     {% include "options.html.twig" with {id: 'deltakere_visning', title: 'Velg visning', start: 'kompakt', options: [{id: 'kompakt', title: 'Kompakt'},{id: 'tabell', title: 'Tabell'}]} %}
                 {% endblock %}
