tydeligere sum-kolonne

--- a/twig/Nokkeltall/rapport.html.twig
+++ b/twig/Nokkeltall/rapport.html.twig
@@ -29,14 +29,28 @@
 					<th colspan="2" style="text-align:right !important;">hvorav unike personer:</th>
 					<th>{{ renderData.getAttr('personer_unike')}}</th>
 				</tr>
+			</table>
 
+			<h2>
+				Antall sceneinnslag påmeldt
+				{{ arrangement.getNavn() }}
+                <br />
+				<small>
+					{{renderData.getAttr('scene_typer')|join(', ')}}
+					summert
+				</small>
+			</h2>
+			<table class="table table-striped col">
 				<tr>
+					<th></th>
+					<th>Innslag</th>
+					<th>Personer</th>
+				</tr>
+                <tr>
 					<th>
 						Sceneinnslag
 						<br/>
-						<small style="font-weight: normal;">
-							({{renderData.getAttr('scene_typer')|join(', ')}})
-						</small>
+						<small style="font-weight: normal;"></small>
 					</th>
 					<th>{{ renderData.getAttr('scene_innslag_count')}}</th>
 					<th>{{ renderData.getAttr('scene_personer_count')}}</th>
