--- a/twig/Kunstkatalog/tilpass.html.twig
+++ b/twig/Kunstkatalog/tilpass.html.twig
@@ -28,11 +28,13 @@
                 {% include "checkbox.html.twig" with {id: 'fylke', title: 'Fylke'} %}
                 {% include "checkbox.html.twig" with {id: 'kommune', title: 'Kommune'} %}
                 {% include "checkbox.html.twig" with {id: 'beskrivelse', title: 'Beskrivelse'} %}
+                {% include "options.html.twig" with {id: 'tittel_visning', title: 'Velg visningsnavn', start: 'tittel_og_navn', options: [{id: 'tittel_og_navn', title: 'Tittel og navn'},{id: 'tittel', title: 'Bare tittel'}]} %}
+
             </ol>
         </div>
 
         <div class="col-12 col-sm-6 col-md-4">
-            {% embed "toggle.html.twig" with {id: 'vis_deltakere', title: 'Vis deltakere?', start: 'yes' } %}
+            {% embed "toggle.html.twig" with {id: 'vis_deltakere', title: 'Vis deltakere?', start: 'no' } %}
                 {% block yes %}
                     {% include "checkbox.html.twig" with {id: 'deltakere_alder', title: 'Alder'} %}
                     {% include "checkbox.html.twig" with {id: 'deltakere_rolle', title: 'Rolle / instrument / funksjon'} %}
@@ -40,15 +42,5 @@
                 {% endblock %}
             {% endembed %}
         </div>
-
-        {#<div class="col-12 col-sm-6 col-md-4">
-            {% embed "toggle.html.twig" with {id: 'vis_titler', title: 'Vis titler?', start: 'yes' } %}
-                {% block yes %}
-                    {% include "checkbox.html.twig" with {id: 'tittel_varighet', title: 'Varighet'} %}
-                    {% include "checkbox.html.twig" with {id: 'tittel_detaljer', title: 'Detaljer'} %}
-                    {% include "options.html.twig" with {id: 'titler_visning', title: 'Velg visning', start: 'kompakt', options: [{id: 'kompakt', title: 'Kompakt'},{id: 'tabell', title: 'Tabell'}]} %}
-                {% endblock %}
-            {% endembed %}
-        </div>#}
     </div>
 {% endif %}
