--- a/twig/TekniskeProver/tilpass.html.twig
+++ b/twig/TekniskeProver/tilpass.html.twig
@@ -18,6 +18,7 @@
             {% include "checkbox.html.twig" with {id: 'fylke', title: 'Fylke'} %}
             {% include "checkbox.html.twig" with {id: 'kommune', title: 'Kommune'} %}
             {% include "checkbox.html.twig" with {id: 'beskrivelse', title: 'Beskrivelse'} %}
+            {% include "checkbox.html.twig" with {id: 'tekniske_behov', title: 'Tekniske behov'} %}
         </ol>
     </div>
 
