--- a/twig/AlleInnslag/tilpass.html.twig
+++ b/twig/AlleInnslag/tilpass.html.twig
@@ -61,7 +61,7 @@
 
 </div>
 
-<div class="row">
+<div class="row mt-5">
     <div class="col-xs-12">
         {% embed "preview/list.html.twig" with {id: 'grupper', title: 'Hvordan skal det sorteres?' } %}
             {% block options %}
