--- a/twig/Program/tilpass.html.twig
+++ b/twig/Program/tilpass.html.twig
@@ -26,6 +26,12 @@
             {% block yes %}
                 {% include "checkbox.html.twig" with {id: 'deltakere_alder', title: 'Alder'} %}
                 {% include "checkbox.html.twig" with {id: 'deltakere_rolle', title: 'Rolle / instrument / funksjon'} %}
+                <li class="list-group-item">
+                    <div style="margin-left: 2em;">
+                        Mobilnummer? Bruk rapporten 
+                        <a href="?page={{GET('page')}}&action={{GET('action')}}&rapport=TekniskeProver">tekniske prøver</a>
+                    </div>
+                </li>
                 {% include "options.html.twig" with {id: 'deltakere_visning', title: 'Velg visning', start: 'kompakt', options: [{id: 'kompakt', title: 'Kompakt'},{id: 'tabell', title: 'Tabell'}]} %}
             {% endblock %}
         {% endembed %}
