Lettere å skjule generateButton

--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -23,7 +23,7 @@
             <p>&nbsp;</p>
         </form>
         <div class="row">
-            <div class="col-12 col-sm-12">
+            <div class="col-12 col-sm-12" id="generateButtonContainer">
                 <button type="button" class="btn btn-primary btn-lg generateReport">Generer rapport</button>
                 <button type="button" class="btn btn-default saveAsTemplate" style="margin-left: 2em;">lagre som mal</button>
             </div>
